I made a secret key for registering an admin
